--- a/css/header.css
+++ b/css/header.css
@@ -304,7 +304,7 @@ main {
     body.nav__open {
         width: 100%;
         height: 100vh;
-        position: fixed;
+        /* position: fixed; */
         overflow: hidden;
     }
 
