--- a/css/style.css
+++ b/css/style.css
@@ -228,15 +228,18 @@ a
 }
 
 .slide {
+    display: flex;
+    width: 25%;
+    flex: 0 0 25%;
     /* min-width: 25%;
     flex: 1 0 25%; */
     /* position: relative; */
     padding: 0 10px;
     box-sizing: border-box;
     opacity: 0.7;
-    transition: opacity 0.3s;
+    /* transition: opacity 0.3s; */
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     height: fit-content;
     position: absolute;
     inset: 0;
@@ -269,6 +272,13 @@ a
     overflow: hidden;
 } */
 
+[data-slides] {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+}
+
 .slide[data-active] {
     display: flex;
     /* flex-wrap: wrap; */
@@ -292,8 +302,7 @@ a
 }
 
 
-.carousel__button:hover,
-.carousel__button:focus {
+.carousel__button:hover {
     color: #FFFFFF;
 }
 
@@ -310,6 +319,19 @@ a
 }
 
 @media screen and (max-width: 768px) {
+
+    .logo .description {
+        padding: 0 1rem;
+    }
+
+    [data-slides] {
+        flex-wrap: wrap;
+    }
+
+    .slide {
+        width: 100%;
+        display: none;
+    }
 
     .slide[data-active] {
         display: flex;
